--- a/modulo2/src/app/views/dashboard.njk
+++ b/modulo2/src/app/views/dashboard.njk
@@ -2,23 +2,23 @@
 
 {% block body %}
   <div class="content">
-  <strong>Olá {{user.name}}</strong>
-  <p>Inicie um agendamento escolhendo um profissional abaixo:</p>
-
-  <ul class="providers">
-    {% for provider in providers %}
-    <li class="provider">
-      <div>
-        <img src="/files/{{ provider.avatar }}" alt="{{ provider.name }}" />
-        <strong>{{ provider.name}}</strong>
-      </div>
-      <a href="/app/appointments/new/{{ provider.id }}">+</a>
-    </li>
-    {% endfor %}
-  </ul>
-  {% if (user.provider === true) %}
-    <a href="/app/schedule" class="link-button">Agendamentos do dia</a>
-  {% endif %}
-  <a href="/app/logout" class="logout">Sair</a>
+    <strong>Olá {{user.name}}</strong>
+    {% include "_partials/flash.njk" %}
+    <p>Inicie um agendamento escolhendo um profissional abaixo:</p>
+    <ul class="providers">
+      {% for provider in providers %}
+      <li class="provider">
+        <div>
+          <img src="/files/{{ provider.avatar }}" alt="{{ provider.name }}" />
+          <strong>{{ provider.name}}</strong>
+        </div>
+        <a href="/app/appointments/new/{{ provider.id }}">+</a>
+      </li>
+      {% endfor %}
+    </ul>
+    {% if (user.provider === true) %}
+      <a href="/app/schedule" class="link-button">Agendamentos do dia</a>
+    {% endif %}
+    <a href="/app/logout" class="logout">Sair</a>
   </div>
 {% endblock %}
